test/libsolidity/syntaxTests/errors/error_location_memory.sol
error E(uint[] memory);
// ----
// ParserError 2314: (15-21): Expected ',' but got 'memory'
